--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "obi-src"]
 	path = .obi-src
-	url = https://github.com/open-telemetry/opentelemetry-ebpf-instrumentation.git
+	url = https://github.com/grafana/opentelemetry-ebpf-instrumentation.git
+	branch = release-1.1
