Move from  grafana to obi test images in integration tests

--- a/test/integration/k8s/manifests/05-uninstrumented-few-services.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-few-services.yml
@@ -144,7 +144,7 @@ spec:
                   - other-progs
       containers:
         - name: utestserver
-          image: 'ghcr.io/grafana/beyla-test/greeting-rails/0.0.1'
+          image: 'ghcr.io/open-telemetry/obi-testimg:rails-0.1.0'
           imagePullPolicy: Always
           ports:          
           - containerPort: 3040
