--- a/test/integration/docker-compose-multiexec-host.yml
+++ b/test/integration/docker-compose-multiexec-host.yml
@@ -50,12 +50,12 @@ services:
       LOG_LEVEL: DEBUG
 
   rtestserver:
-    image: ghcr.io/grafana/beyla-test/greeting-rust/0.0.4
+    image: ghcr.io/open-telemetry/obi-testimg:rust-0.1.0
     ports:
       - 8091:8090
 
   rtestserverssl:
-    image: ghcr.io/grafana/beyla-test/greeting-rust-ssl/0.0.2
+    image: ghcr.io/open-telemetry/obi-testimg:rust-ssl-0.1.0
     ports:
       - 8491:8490
     environment:
@@ -100,17 +100,17 @@ services:
       - 3031:3030
 
   utestserver:
-    image: ghcr.io/grafana/beyla-test/greeting-rails/0.0.2
+    image: ghcr.io/open-telemetry/obi-testimg:rails-0.1.0
     ports:
       - 3041:3040
 
   utestserverssl:
-    image: ghcr.io/grafana/beyla-test/greeting-rails-ssl/0.0.2
+    image: ghcr.io/open-telemetry/obi-testimg:rails-ssl-0.1.0
     ports:
       - 3044:3043
-        
+
   jtestserver:
-    image: ghcr.io/grafana/beyla-test/greeting-java-jar/0.0.7
+    image: ghcr.io/open-telemetry/obi-testimg:java-jar-0.1.0
     ports:
       - "8086:8085"
 
