Run script again

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -1,17 +1,15 @@
 name: Check Undocumented Fields
 
 on: {}
-  # Check undocumented fields failing since https://github.com/grafana/beyla/pull/2085
-  # TODO: fix
-#  pull_request:
-#    paths:
-#      - '**.go'
-#      - 'docs/**/*.md'
-#  push:
-#    branches: [ main ]
-#    paths:
-#      - '**.go'
-#      - 'docs/**/*.md'
+ pull_request:
+   paths:
+     - '**.go'
+     - 'docs/**/*.md'
+ push:
+   branches: [ main ]
+   paths:
+     - '**.go'
+     - 'docs/**/*.md'
 
 jobs:
   check-docs:
