--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -12,7 +12,7 @@ jobs:
   vale:
     runs-on: ubuntu-latest
     container:
-      image: grafana/vale:latest
+      image: grafana/vale@sha256:5eded74785e98384d84878073d5d41125b2ad21f1d711b06ab214c7890a81a19
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
