--- a/test/integration/components/kafka/docker-compose.yml
+++ b/test/integration/components/kafka/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   kafka:
     restart: always
     container_name: kafka-like
-    image: docker.io/bitnami/kafka:3.3
+    image: docker.io/bitnamilegacy/kafka:3.3
     ports:
       - "9093:9093"
     volumes:
