Fix client and client_service_namespace attributes in service graph metrics

--- a/test/integration/k8s/manifests/06-instrumented-grpc-client.template.yml
+++ b/test/integration/k8s/manifests/06-instrumented-grpc-client.template.yml
@@ -81,3 +81,7 @@ spec:
           value: "true"
         - name: BEYLA_NAME_RESOLVER_SOURCES
           value: "dns,k8s"
+        {{- range $key, $value := .Env }}
+        - name: {{$key}}
+          value: "{{$value}}"
+        {{- end }}
