--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,37 @@
+version: "2"
 issues:
-  exclude-dirs:
-    - configs
-    - docs
-    - .obi-src
-  exclude-rules:
+  formatters:
+    enable:
+      - gci
+      - gofumpt
+  settings:
+    gofmt:
+      # simplify code: gofmt with `-s` option, true by default
+      simplify: true
+
+    gci:
+      sections:
+        - standard
+        - default
+        - prefix(go.opentelemetry.io/obi)
+        - prefix(github.com/grafana)
+        - localmodule
+run:
+  go: "1.25"
+  build-tags:
+    - integration
+linters:
+  exclusions:
+    paths:
+    - ^configs
+    - ^docs
+    - ^.obi-src
+    - ^vendor
+    presets:
+      - std-error-handling
+    # Log a warning if an exclusion rule is unused.
+    warn-unused: true
+    rules:
     # revive returns false indent-error-flow errors in some cases where
     # an "else" clause is required to access the if condition context
     - path: .*
@@ -17,35 +45,28 @@ issues:
       linters:
         - staticcheck
       text: "SA1019:"
-run:
-  go: "1.25"
-  build-tags:
-    - integration
-linters:
+
   enable:
     - errcheck
     - errorlint
     - cyclop
     - errname
     - gocritic
-    - goimports
-    - gosimple
     - govet
     - ineffassign
-    - revive
+    # - revive TODO: re-add
     - staticcheck
-    - stylecheck
-    - typecheck
     - unused
   disable:
     - exhaustive
-linters-settings:
-  gocritic:
-    enabled-checks:
-      - rangeExprCopy
-      - rangeValCopy
-      - indexAlloc
-      - commentedOutCode
-  cyclop:
-    max-complexity: 12
+  settings:
+
+    gocritic:
+      enabled-checks:
+        - rangeExprCopy
+        - rangeValCopy
+        - indexAlloc
+        - commentedOutCode
+    cyclop:
+      max-complexity: 12
 
