Fix netolly tests configuration

--- a/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
+++ b/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
@@ -79,3 +79,9 @@ spec:
               value: "beyla"
             - name: DEPLOYMENT_ENVIRONMENT
               value: "deployment.environment"
+            - name: BEYLA_NETWORK_RING_BUFFER_FLUSH_PERIOD
+              value: "1s"
+            - name: BEYLA_NETWORK_MAX_FLOW_DURATION
+              value: "1s"
+            - name: OTEL_METRIC_EXPORT_INTERVAL
+              value: "5000"
