--- a/test/integration/docker-compose-java-kafka-400.yml
+++ b/test/integration/docker-compose-java-kafka-400.yml
@@ -36,7 +36,7 @@ services:
       kafka:
         condition: service_started
 
-  obi:
+  autoinstrumenter:
     build:
       context: ../..
       dockerfile: ./test/integration/components/beyla/Dockerfile
@@ -45,12 +45,12 @@ services:
       - ./system/sys/kernel/security:/sys/kernel/security
       - ../../testoutput:/coverage
       - ../../testoutput/run-java:/var/run/beyla
-    image: hatest-obi
+    image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     network_mode: "service:testserver"
     pid: "service:testserver"
     environment:
-      BEYLA_CONFIG_PATH: "/configs/beyla-config.yml"
+      BEYLA_CONFIG_PATH: "/configs/instrumenter-config.yml"
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
